# trossen_cloud_cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: configuration.md
scripts/: release.sh
src/trossen_cli/: __init__.py  __main__.py  api_client.py  config.py  download.py  types.py  upload.py
src/trossen_cli/commands/: datasets.py  models.py
src/trossen_cloud_cli/: __init__.py  __main__.py  auth.py  cli.py  config.py  download.py  output.py  progress.py  types.py  upload.py
src/trossen_cloud_cli/commands/: auth.py  config.py  datasets.py  training_jobs.py
src/trossen_cloud_cli/validators/: __init__.py  lerobot.py  mcap.py
tests/: __init__.py  test_add_episodes.py  test_api_endpoints.py  test_cli.py  test_config.py  test_dataset_web_url.py  test_progress.py  test_remove_episodes.py  test_types.py  test_upload_scale.py  test_upload_truncation.py  test_validators.py
trc/: auth.py  cli.py  config.py
trc/commands/: auth.py  ls.py  user.py  version.py
