[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trossen_cloud_cli"
version = "0.1.2"
description = "CLI for interacting with Trossen Cloud APIs"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [
    { name = "Trossen Robotics" }
]
keywords = [
    "robotics",
    "cli",
    "trossen",
    "cloud",
    "datasets",
    "models",
]
dependencies = [
    "httpx>=0.25.0",
    "huggingface_hub>=0.20.0",
    "keyring>=24.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "typer>=0.9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/TrossenRobotics/trossen_cloud_cli"
Repository = "https://github.com/TrossenRobotics/trossen_cloud_cli"
Issues = "https://github.com/TrossenRobotics/trossen_cloud_cli/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
trc = "trossen_cloud_cli.cli:app"

[tool.hatch.build]
exclude = [
    "CLAUDE.md",
    ".claude/",
    "Makefile",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trossen_cloud_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
